# daimojo-rs

./: Cargo.toml  Makefile  build.rs  to-rust.sed
.github/workflows/: rust.yml
data/fillna_str/: example.csv  pipeline.mojo
data/iris/: expected.csv  pipeline.mojo  test.csv
data/wine/: pipeline.mojo  wine_test.csv
doc/: ffi-resources.md
lib/linux_x64/: c_api.h
libempty/: Cargo.toml
libempty/src/: lib.rs
libjustversion/: Cargo.toml
libjustversion/src/: lib.rs
src/: carray.rs  cmd_predict.rs  csv_export.rs  csv_import.rs  daimojo.rs  daimojo_library.rs  demo.c  error.rs  lib.rs  main.rs
src/daimojo_library/: pre_1587.rs
tests/: simple.rs
tests/data/: transform_agg_sum_py.input.csv  transform_agg_sum_py.mojo  transform_agg_sum_py.output.csv
