[package]
name = "mojo2-cli"
version = "0.1.0"
edition = "2021"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
dlopen2 = "0.4.1"
dlopen2_derive = "0.2.0"

[build-dependencies]
#cc = { version = "1.0", features = ["parallel"] }
#pkg-config = "0.3"
