[package]
name = "daimojo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen2 = "0.4.1"
dlopen2_derive = "0.2.0"
clap = { version = "4.0.14", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
strip = true  # Automatically strip symbols from the binary.

[workspace]
members = [
    "libjustversion",
    "libempty",
]
