[package]
name = "justversion"
version = "0.1.0"
edition = "2021"
description = "Dummy dynamic library, only providing MOJO_Version to demonstrate full control of symbol loading"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
